# Ai-outreach-agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_pipeline.py  run_simulation.py
.github/workflows/: deploy.yml
app/: main.py  schemas.py
dashboard/: streamlit_app.py
data/processed/: linkedin_leads_processed.csv
data/raw/: linkedin_leads.csv
notebooks/: 01_explore_data.ipynb
src/: config.py  data_preprocessing.py
src/agents/: emailer_agent.py  graph.py  researcher_agent.py  writer_agent.py
src/agents/schemas/: __init__.py  emailer_schema.py  research_schema.py  writer_schema.py
src/configs/: sender_profile.py
src/utils/: template_fill.py
