[project]
name = "ai-outreach-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker==37.6.0",
    "fastapi==0.116.1",
    "ipykernel==6.30.1",
    "langchain==0.3.27",
    "langchain-google-genai==2.1.10",
    "langchain-tavily==0.2.11",
    "langgraph==0.6.6",
    "langsmith==0.4.25",
    "pandas==2.3.2",
    "pydantic==2.11.7",
    "python-dotenv==1.1.1",
    "requests==2.32.5",
    "streamlit==1.49.1",
    "tqdm==4.67.1",
    "uvicorn==0.35.0",
]
